--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 
     <section class="hero"></section>
 
-    <!--SEO Section - shortened class name, added alt text, deleted dic and added a section-->
+    <!--SEO Section - shortened class name, added alt text, deleted dic and added an article tag-->
         <div class="content" >
-        <section class="seo">
+        <article class="search-engine">
             <img src="./assets/images/search-engine-optimization.jpg" alt="" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
@@ -50,11 +50,11 @@
                 as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows 
                 you to increase your visibility and find the right customers for your business.
             </p>
-        </section>
+        </article>
     <!--End of SEO -->    
 
-    <!--Start Online Reputation Section: added alt text, deleted id, changed class name, added section tag-->
-        <section>
+    <!--Start Online Reputation Section: added alt text, deleted id, changed class name, added the article tag-->
+        <article>
         <div class="online-reputation">
             <img src="./assets/images/online-reputation-management.jpg" alt="" class="float-right" />
             <h2>Online Reputation Management</h2>
@@ -64,11 +64,11 @@
                 gives you the control over what potential customers see when they search for your business.
             </p>
         </div>
-        </section>
+    </article>
         <!--End of Reputation Section-->
 
-        <!--Start of Social Media Marketing: added section tag, deleted id, added alt text-->
-        <section>
+        <!--Start of Social Media Marketing: added the article tag, deleted id, added alt text-->
+        <article>
         <div class="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" alt="" class="float-left" />
             <h2>Social Media Marketing</h2>
@@ -78,7 +78,7 @@
                 and increase your lead generation.
             </p>
         </div>
-        </section>
+    </article>
         </div>
         <!-- End of Social media marketing-->
         
@@ -113,12 +113,13 @@
             </p>
         </div>
     </div>
-    <div class="footer">
+    <!--Footer: deleted dev class: footer and added the footer tags-->
+    <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 </body>
 
 </html>
