corrected comment section

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <section class="hero"></section>
 
-    <!--SEO Section - shortened class name, added alt text, deleted dic and added an article tag-->
+    <!--SEO Section - shortened class name, added alt text, deleted div and added an article tag-->
         <div class="content" >
         <article class="search-engine">
             <img src="./assets/images/search-engine-optimization.jpg" alt="" class="float-left" />
@@ -113,7 +113,7 @@
             </p>
         </div>
     </div>
-    <!--Footer: deleted dev class: footer and added the footer tags-->
+    <!--Footer: deleted div class: footer and added the footer tags-->
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
